Fix shadow bleed on main page images

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ h2{
     width: auto;
     border: 1px solid #bbb;
     border-radius: 5px;
-    box-shadow: 10px 5px 25px rgba(0,0,0,0.5);
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
 }
 
 /* main page link stuff */
